--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"scripts": {
 		"start": "vite dev --host --open",
 		"dev": "vite dev",
-		"dev:back": "docker compose down && docker compose build && docker compose up -d",
-		"dev:win": "docker compose down && docker compose build && docker compose up -d && deno run --allow-run --watch ./server/windows-pls.ts",
+		"dev:back": "docker compose down && docker compose build && docker compose up -d && deno run --allow-run --allow-read ./server/windows-pls.ts",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
