--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
 		"l": "npm run format && npm run lint && npm run check"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.4.3",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/markdown-it": "^13.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
@@ -31,7 +32,7 @@
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^4.5.0"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
